--- a/chess/indexbb.html
+++ b/chess/indexbb.html
@@ -49,7 +49,7 @@
 		<textarea id="fenbox" type="text" placeholder="FEN"></textarea>
 	</div>
 	<div id="modal" onclick="if(event.target===this)this.style.visibility='hidden'"></div>
-	<script type="module" src="chessbb.mjs"></script>
+	<script type="module" src="chessbb.js"></script>
 </body>
 
 </html>
